# Verax

./: .gitignore  Makefile  README.md  categorize_sites.py  categorized_websites.csv  extract_scrapable.py  pyproject.toml  requirements.txt  scrapable_websites.csv  scrapable_websites_categorized.csv
.tranco_cache/: metadata.json
dashboard/: .gitignore  README.md  electron-builder.json5  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.ts
docs/: hpc_architecture_audit.md
privacy_research_dataset/: annotate_cli.py  annotation_state.py  annotation_types.py  annotator.py  catalog_api.py  catalog_ingest.py  catalog_manager.py  catalog_outbox.py  catalog_query.py  catalog_schema.py  catalog_store.py  catalog_taxonomy.py  catalog_types.py  cli.py  crawl4ai_client.py  crawler.py  hpc_artifacts.py  hpc_commands.py  hpc_contracts.py  hpc_control_plane.py  hpc_io.py  hpc_operations.py  hpc_runtime.py  hpc_service.py  policy_finder.py  summary.py  text_extract.py  tranco_list.py
privacy_research_dataset.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: bootstrap_ubuntu.sh  fetch_tranco_list.py  sync_main_to_hpc.sh  verify_setup.sh
tests/: test_annotation_state.py  test_annotator.py  test_catalog.py  test_cli_pipeline.py  test_cli_resource_scaling.py  test_cli_resume_logic.py  test_hpc_artifacts.py  test_hpc_commands.py  test_hpc_contracts.py  test_hpc_control_plane.py  test_hpc_operations.py  test_hpc_runtime.py  test_hpc_service.py  test_hpc_shell.py  test_non_browsable.py  test_summary.py  test_text_extract.py  (+1 more)
(+85 files in other folders)
