[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privacy-research-dataset"
version = "0.1.0"
description = "Research-grade Step-1 dataset builder: websites -> privacy policies + observed third-party tools + third-party policy texts (via Tracker Radar)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Research Class Project"}]
dependencies = [
  "crawl4ai>=0.7.0",
  "tranco>=0.8.0",
  "tldextract>=5.1.0",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2",
  "chardet>=5.2.0,<6",
  "tqdm>=4.66.4",
  "python-dateutil>=2.9.0.post0",
  "aiohttp>=3.9",
  "litellm>=1.0",
  "trafilatura>=1.12.0",
  "openai>=1.0.0",
  "tiktoken>=0.7.0",
  "readability-lxml>=0.8.1",
  "pypandoc>=1.13",
  "pandoc>=2.4",
  "rapidfuzz>=3.0",
  "lemminflect>=0.2.3",
  "python-rapidjson>=1.10",
  "regex>=2024.0",
  "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]
openwpm = [
  # OpenWPM is heavy and OS-dependent. Install separately if you need it.
]

[project.scripts]
privacy-dataset = "privacy_research_dataset.cli:main"
privacy-dataset-annotate = "privacy_research_dataset.annotate_cli:main"
privacy-dataset-hpc-service = "privacy_research_dataset.hpc_service:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["privacy_research_dataset*"]
